--- a/package.json
+++ b/package.json
@@ -17,7 +17,21 @@
   },
   "homepage": "https://github.com/matgargano/SchmiederCavachon",
   "dependencies": {
-    "masonry": "0.0.2",
+    
+    "imagesloaded": "^4.0.0",
+    "jquery": "^2.1.4",
+    "masonry-layout": "^3.3.2",
     "readmore.js": "^2.0.4"
+  },
+  "devDependencies": {
+    "bootstrap-sass": "^3.3.6",
+    "grunt": "^0.4.5",
+    "grunt-autoprefixer": "^3.0.3",
+    "grunt-contrib-cssmin": "^0.14.0",
+    "grunt-contrib-imagemin": "^1.0.0",
+    "grunt-contrib-jshint": "^0.11.3",
+    "grunt-contrib-sass": "^0.9.2",
+    "grunt-contrib-uglify": "^0.11.0",
+    "grunt-contrib-watch": "^0.6.1"
   }
 }
